--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-#name: IssueTracker
+name: IssueTracker
 
-#on:
-#  push:
-#    branches: [ master ]
+on:
+  issues:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
