--- a/.github/action-issueTracker/action.yml
+++ b/.github/action-issueTracker/action.yml
@@ -2,11 +2,11 @@ name: "Issue Tracker"
 description: "Keeps a main readme-esk file with all project issues for easy viewing."
 author: "contactMe@peterjkingston.com"
 
-#inputs:
-#  MY_NAME:
-#    description: "Who to greet"
-#    required: true
-#    default: "World"
+inputs:
+  MY_NAME:
+    description: "Who to greet"
+    required: true
+    default: "World"
 
 runs:
   using: "docker"
