--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,24 +2,25 @@ name: IssueTracker
 
 on:
   issues:
+    types: [ opened, edited, deleted ]
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
+    name: Issue Tracker Action
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Check out Repository
+        if: ${{github.event.name == "issues" && github.event.action == }}
+        uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      # Write issue summaries to the Issues.md file
+      - name: Create or Modify Issues.md file
+        uses: ../action-IssuesTracker
+        with:
+          MY_DESTINATION: ./Issues.md
+          MY_ISSUE: this
