--- a/.github/action-issueTracker/action.yml
+++ b/.github/action-issueTracker/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: "The github issue object"
     required: true
   
-  MY_FILEPATH: "The destination path of the issues summary file."
+  MY_DESTINATION: "The destination path of the issues summary file."
     required: true
     default: ./Issues.md
     
