--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: IssueTracker
 
-on:
-  issues:
-    types: [ opened, edited, deleted ]
-    branches: [ master ]
+#on:
+#  issues:
+#    types: [ opened, edited, deleted ]
+#    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
